--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,21 @@
 {
   "name": "SafeSky UA",
   "short_name": "SafeSky",
-  "description": "Повітряні тривоги та загрози в Україні. Дані з Telegram-каналу SafeSky UA.",
-  "start_url": "./",
-  "scope": "./",
+  "description": "Повітряні тривоги та інші загрози в Україні. Дані з Telegram-каналу SafeSky UA.",
+  "start_url": "/safeskyua/index.html",
+  "scope": "/safeskyua/",
   "display": "standalone",
   "background_color": "#0b0f14",
   "theme_color": "#0b0f14",
+  "lang": "uk",
   "icons": [
     {
-      "src": "./res/drawable/icon192.png",
+      "src": "/safeskyua/res/drawable/icon192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./res/drawable/icon512.png",
+      "src": "/safeskyua/res/drawable/icon512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
