--- a/.github/workflows/update_feed.yml
+++ b/.github/workflows/update_feed.yml
@@ -1,1 +1,25 @@
+name: Update RSS cache buster
 
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: "*/10 * * * *"
+
+jobs:
+  bump:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Update cache buster file
+        run: |
+          mkdir -p app
+          date -u +"%Y-%m-%dT%H:%M:%SZ" > app/last_update.txt
+
+      - name: Commit changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add app/last_update.txt
+          git commit -m "chore: bump cache" || echo "No changes"
+          git push
